k8s/network-policies/apigate-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gate-net-pol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend-apigate
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend-userdata
    ports:
    - protocol: TCP
      port: 8081

    - podSelector:
        matchLabels:
          app: backend-suggest
    ports:
    - protocol: TCP
      port: 8083
