k8s/network-policies/suggest-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: suggest-net-pol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend-suggest
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend-apigate
    ports:
    - protocol: TCP
      port: 8083 
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0  
    ports:
    - protocol: TCP
      port: 443

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
